@@ -5,7 +5,8 @@ Changelog
 1.1.3 (unreleased)
 ------------------
 
-Nothing yet.
+- Adds the ability to delete allocations found when searching. Fixes #161.
+  [href]
 
 1.1.2 (2014-08-12)
 ------------------
